@@ -8,9 +8,9 @@ BUG FIXES:
 	- Fix to use 4096 EDNS limit for IPv6 on Linux.
 
 OPERATIONAL NOTES:
-	- Another configure option: --enable-edns1220. On by default. If set to
-		"no", NSD will return FORMERR upon receiving EDNS0 queries with UDP
-		limit less than 1220.
+	- Another configure option: --with-edns-min-bufsize. Zero by default.
+		If set to a higher value, NSD will ignore the DO bit upon receiving EDNS0
+		queries with UDP limit less than the configured EDNS0 minimum buffer size.
 
 3.2.2
 =============
